| Summary: | ASTERISK-28158: Some conditions prevent running of el_end, break the terminal. | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2018-11-11 07:35:21.000-0600 | Date Closed: | 2018-11-13 10:51:49.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/Configuration Core/General |
| Versions: | 13.23.1 GIT 16.0.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | {{el_end}} is not always run when exiting Asterisk processes. This can cause the terminal to be broken. I've found two situations where this occurs:
* {{console=yes}} set in {{asterisk.conf}}, {{rasterisk -x}} piped to another utility breaks the terminal which ran rasterisk. I could only reproduce this in CentOS 7, it doesn't seem to happen in Fedora 28. * Asterisk daemon started at command-line with console enabled via config or command-line, {{rasterisk -x 'core stop now'}}. This leaves the terminal which started the daemon in a broken state. As a partial work-around you can run {{reset}} from the broken terminal to fix it. Original report at https://community.asterisk.org/t/asterisk-16-piped-rx-breaks-shell/77061/ | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-11-11 07:35:23.741-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2018-11-13 10:51:49.938-0600 Change 10614 merged by George Joseph: core: Ensure that el_end is always run when needed. [https://gerrit.asterisk.org/10614|https://gerrit.asterisk.org/10614] By: Friendly Automation (friendly-automation) 2018-11-14 07:07:39.307-0600 Change 10616 merged by Joshua Colp: core: Ensure that el_end is always run when needed. [https://gerrit.asterisk.org/10616|https://gerrit.asterisk.org/10616] By: Friendly Automation (friendly-automation) 2018-11-14 07:07:53.556-0600 Change 10615 merged by Joshua Colp: core: Ensure that el_end is always run when needed. [https://gerrit.asterisk.org/10615|https://gerrit.asterisk.org/10615] By: Friendly Automation (friendly-automation) 2018-11-16 09:23:17.509-0600 Change 10646 merged by George Joseph: core: Fix handling of restart from remote console. [https://gerrit.asterisk.org/10646|https://gerrit.asterisk.org/10646] By: Friendly Automation (friendly-automation) 2018-11-16 09:23:27.661-0600 Change 10648 merged by George Joseph: core: Fix handling of restart from remote console. [https://gerrit.asterisk.org/10648|https://gerrit.asterisk.org/10648] By: Friendly Automation (friendly-automation) 2018-11-16 09:23:37.883-0600 Change 10647 merged by George Joseph: core: Fix handling of restart from remote console. [https://gerrit.asterisk.org/10647|https://gerrit.asterisk.org/10647] | ||